fixed alignment on body and footer

--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,19 @@
-{
-  box-sizing: border-box;
-}
-
 body{
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #8f6767;
+  background-color: #954a4a;
+  text-align: center;
 }
 
 .nav {
-  background-color: rgb(9, 71, 48) ;
-  color: rgb(219, 196, 255);
+  background-color: rgb(164, 45, 12) ;
+  color: rgb(206, 63, 23);
   display: flex;
   justify-content: space-between;
   padding: 0 1rem;
   gap: 2rem;
   align-items: center;
+  text-align: center;
 }
 
 .site-title{
